:wastebasket: remove: Removendo arquivos não utilizados do projeto para manter a organização e atualização contínua
